--- a/Q5PyTorch.ipynb
+++ b/Q5PyTorch.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "assert '.'.join(torch.__version__.split('.')[:2]) == '1.4'\n",
+    "# assert '.'.join(torch.__version__.split('.')[:2]) == '1.4'\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import DataLoader\n",
@@ -119,13 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Files already downloaded and verified\nFiles already downloaded and verified\nFiles already downloaded and verified\n"
+    }
+   ],
    "source": [
     "NUM_TRAIN = 49000\n",
     "\n",
@@ -177,13 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "using device: cpu\n"
+    }
+   ],
    "source": [
     "USE_GPU = True\n",
     "\n",
@@ -237,13 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Before flattening:  tensor([[[[ 0,  1],\n          [ 2,  3],\n          [ 4,  5]]],\n\n\n        [[[ 6,  7],\n          [ 8,  9],\n          [10, 11]]]])\nAfter flattening:  tensor([[ 0,  1,  2,  3,  4,  5],\n        [ 6,  7,  8,  9, 10, 11]])\n"
+    }
+   ],
    "source": [
     "def flatten(x):\n",
     "    N = x.shape[0] # read in N, C, H, W\n",
@@ -274,13 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "torch.Size([64, 10])\n"
+    }
+   ],
    "source": [
     "import torch.nn.functional as F  # useful stateless functions\n",
     "\n",
@@ -1187,9 +1211,9 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.2 64-bit ('env': venv)",
    "language": "python",
-   "name": "python3"
+   "name": "python37264bitenvvenvbb1d1e9a010a4e94a0bea58b39598660"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1201,7 +1225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.2-final"
   },
   "toc": {
    "nav_menu": {},
