--- a/Q5PyTorch.ipynb
+++ b/Q5PyTorch.ipynb
@@ -411,9 +411,11 @@
     "    ################################################################################\n",
     "    # TODO: Implement the forward pass for the three-layer ConvNet.                #\n",
     "    ################################################################################\n",
-    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
-    "    pass\n",
-    "\n    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "    x = F.conv2d(x, conv_w1, conv_b1)\n",
+    "\n",
+    "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ################################################################################\n",
     "    #                                 END OF YOUR CODE                             #\n",
     "    ################################################################################\n",
