--- a/Q5PyTorch.ipynb
+++ b/Q5PyTorch.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,12 @@
     "    ################################################################################\n",
     "    # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
-    "    x = F.conv2d(x, conv_w1, conv_b1)\n",
+    "    x = F.conv2d(x, conv_w1, conv_b1, padding=2)\n",
+    "    x = F.relu(x)\n",
+    "    x = F.conv2d(x, conv_w2, conv_b2, padding=1)\n",
+    "    x = F.relu(x)\n",
+    "    x = flatten(x)\n",
+    "    scores = x.mm(fc_w) + fc_b\n",
     "\n",
     "    # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "    ################################################################################\n",
@@ -433,14 +438,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "barebones_output_shape",
     "tags": [
      "pdf-ignore-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "torch.Size([64, 10])\n"
+    }
+   ],
    "source": [
     "def three_layer_convnet_test():\n",
     "    x = torch.zeros((64, 3, 32, 32), dtype=dtype)  # minibatch size 64, image size [3, 32, 32]\n",
@@ -476,13 +487,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[ 0.9243,  0.1267, -0.4709,  0.0984,  1.7405],\n        [ 0.7814, -0.3961, -0.1472,  1.4224,  0.5450],\n        [ 0.3464, -0.4526, -0.4640,  0.6273, -0.2382]], requires_grad=True)"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
    "source": [
     "def random_weight(shape):\n",
     "    \"\"\"\n",
@@ -520,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -567,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -640,9 +660,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration 0, loss = 3.5588\nChecking accuracy on the val set\nGot 145 / 1000 correct (14.50%)\n\nIteration 100, loss = 2.3120\nChecking accuracy on the val set\nGot 304 / 1000 correct (30.40%)\n\nIteration 200, loss = 2.2470\nChecking accuracy on the val set\nGot 360 / 1000 correct (36.00%)\n\nIteration 300, loss = 2.0008\nChecking accuracy on the val set\nGot 392 / 1000 correct (39.20%)\n\nIteration 400, loss = 1.9884\nChecking accuracy on the val set\nGot 413 / 1000 correct (41.30%)\n\nIteration 500, loss = 1.8798\nChecking accuracy on the val set\nGot 368 / 1000 correct (36.80%)\n\nIteration 600, loss = 1.6273\nChecking accuracy on the val set\nGot 418 / 1000 correct (41.80%)\n\nIteration 700, loss = 1.7252\nChecking accuracy on the val set\nGot 410 / 1000 correct (41.00%)\n\n"
+    }
+   ],
    "source": [
     "hidden_layer_size = 4000\n",
     "learning_rate = 1e-2\n",
@@ -674,11 +700,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "barebones_accuracy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration 0, loss = 3.2259\nChecking accuracy on the val set\nGot 112 / 1000 correct (11.20%)\n\nIteration 100, loss = 2.1910\nChecking accuracy on the val set\nGot 337 / 1000 correct (33.70%)\n\nIteration 200, loss = 1.7483\nChecking accuracy on the val set\nGot 362 / 1000 correct (36.20%)\n\nIteration 300, loss = 1.7437\nChecking accuracy on the val set\nGot 406 / 1000 correct (40.60%)\n\nIteration 400, loss = 1.5764\nChecking accuracy on the val set\nGot 425 / 1000 correct (42.50%)\n\nIteration 500, loss = 1.7172\nChecking accuracy on the val set\nGot 430 / 1000 correct (43.00%)\n\nIteration 600, loss = 1.5949\nChecking accuracy on the val set\nGot 437 / 1000 correct (43.70%)\n\nIteration 700, loss = 1.7821\nChecking accuracy on the val set\nGot 454 / 1000 correct (45.40%)\n\n"
+    }
+   ],
    "source": [
     "learning_rate = 3e-3\n",
     "\n",
@@ -695,9 +727,16 @@
     "################################################################################\n",
     "# TODO: Initialize the parameters of a three-layer ConvNet.                    #\n",
     "################################################################################\n",
-    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
-    "pass\n",
-    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "conv_w1 = random_weight((channel_1, 3, 5, 5))\n",
+    "conv_b1 = zero_weight((channel_1))\n",
+    "conv_w2 = random_weight((channel_2, channel_1, 3, 3))\n",
+    "conv_b2 = zero_weight((channel_2))\n",
+    "fc_w = random_weight((channel_2*32*32, 10))\n",
+    "fc_b = zero_weight((10))\n",
+    "\n",
+    "# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "################################################################################\n",
     "#                                 END OF YOUR CODE                             #\n",
     "################################################################################\n",
@@ -732,9 +771,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "torch.Size([64, 10])\n"
+    }
+   ],
    "source": [
     "class TwoLayerFC(nn.Module):\n",
     "    def __init__(self, input_size, hidden_size, num_classes):\n",
@@ -784,11 +829,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "module_output_shape"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "torch.Size([64, 10])\n"
+    }
+   ],
    "source": [
     "class ThreeLayerConvNet(nn.Module):\n",
     "    def __init__(self, in_channel, channel_1, channel_2, num_classes):\n",
@@ -797,9 +848,13 @@
     "        # TODO: Set up the layers you need for a three-layer ConvNet with the  #\n",
     "        # architecture defined above.                                          #\n",
     "        ########################################################################\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
-    "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        self.conv_1 = nn.Conv2d(3, channel_1, 5, padding=2)\n",
+    "        self.conv_2 = nn.Conv2d(channel_1, channel_2, 3, padding=1)\n",
+    "        self.fc = nn.Linear(channel_2*32*32, num_classes)\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "        ########################################################################\n",
     "        #                          END OF YOUR CODE                            #       \n",
     "        ########################################################################\n",
@@ -811,9 +866,16 @@
     "        # should use the layers you defined in __init__ and specify the        #\n",
     "        # connectivity of those layers in forward()                            #\n",
     "        ########################################################################\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
-    "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        x = self.conv_1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.conv_2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = flatten(x)\n",
+    "        scores = self.fc(x)\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "        ########################################################################\n",
     "        #                             END OF YOUR CODE                         #\n",
     "        ########################################################################\n",
@@ -840,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,9 +995,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration 0, loss = 3.3100\nChecking accuracy on validation set\nGot 187 / 1000 correct (18.70)\n\nIteration 100, loss = 2.0902\nChecking accuracy on validation set\nGot 367 / 1000 correct (36.70)\n\nIteration 200, loss = 1.9376\nChecking accuracy on validation set\nGot 367 / 1000 correct (36.70)\n\nIteration 300, loss = 1.8688\nChecking accuracy on validation set\nGot 390 / 1000 correct (39.00)\n\nIteration 400, loss = 1.9415\nChecking accuracy on validation set\nGot 387 / 1000 correct (38.70)\n\nIteration 500, loss = 1.7336\nChecking accuracy on validation set\nGot 432 / 1000 correct (43.20)\n\nIteration 600, loss = 1.9752\nChecking accuracy on validation set\nGot 424 / 1000 correct (42.40)\n\nIteration 700, loss = 1.8448\nChecking accuracy on validation set\nGot 398 / 1000 correct (39.80)\n\n"
+    }
+   ],
    "source": [
     "hidden_layer_size = 4000\n",
     "learning_rate = 1e-2\n",
@@ -957,11 +1025,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "module_accuracy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration 0, loss = 2.2967\nChecking accuracy on validation set\nGot 116 / 1000 correct (11.60)\n\nIteration 100, loss = 1.7570\nChecking accuracy on validation set\nGot 301 / 1000 correct (30.10)\n\nIteration 200, loss = 1.7324\nChecking accuracy on validation set\nGot 378 / 1000 correct (37.80)\n\nIteration 300, loss = 1.6884\nChecking accuracy on validation set\nGot 403 / 1000 correct (40.30)\n\nIteration 400, loss = 1.8279\nChecking accuracy on validation set\nGot 425 / 1000 correct (42.50)\n\nIteration 500, loss = 1.6075\nChecking accuracy on validation set\nGot 418 / 1000 correct (41.80)\n\nIteration 600, loss = 1.5633\nChecking accuracy on validation set\nGot 433 / 1000 correct (43.30)\n\nIteration 700, loss = 1.8055\nChecking accuracy on validation set\nGot 431 / 1000 correct (43.10)\n\n"
+    }
+   ],
    "source": [
     "learning_rate = 3e-3\n",
     "channel_1 = 32\n",
@@ -972,9 +1046,12 @@
     "################################################################################\n",
     "# TODO: Instantiate your ThreeLayerConvNet model and a corresponding optimizer #\n",
     "################################################################################\n",
-    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
-    "pass\n",
-    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "model = ThreeLayerConvNet(3, channel_1, channel_2, 10)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "################################################################################\n",
     "#                                 END OF YOUR CODE                             \n",
     "################################################################################\n",
@@ -1002,9 +1079,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration 0, loss = 2.3794\nChecking accuracy on validation set\nGot 136 / 1000 correct (13.60)\n\nIteration 100, loss = 2.0327\nChecking accuracy on validation set\nGot 362 / 1000 correct (36.20)\n\nIteration 200, loss = 1.5108\nChecking accuracy on validation set\nGot 401 / 1000 correct (40.10)\n\nIteration 300, loss = 1.6501\nChecking accuracy on validation set\nGot 428 / 1000 correct (42.80)\n\nIteration 400, loss = 1.2421\nChecking accuracy on validation set\nGot 439 / 1000 correct (43.90)\n\nIteration 500, loss = 1.9107\nChecking accuracy on validation set\nGot 449 / 1000 correct (44.90)\n\nIteration 600, loss = 2.0755\nChecking accuracy on validation set\nGot 431 / 1000 correct (43.10)\n\nIteration 700, loss = 1.7189\nChecking accuracy on validation set\nGot 451 / 1000 correct (45.10)\n\n"
+    }
+   ],
    "source": [
     "# We need to wrap `flatten` function in a module in order to stack it\n",
     "# in nn.Sequential\n",
@@ -1051,11 +1134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "sequential_accuracy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration 0, loss = 2.3052\nChecking accuracy on validation set\nGot 134 / 1000 correct (13.40)\n\nIteration 100, loss = 1.6924\nChecking accuracy on validation set\nGot 442 / 1000 correct (44.20)\n\nIteration 200, loss = 1.5892\nChecking accuracy on validation set\nGot 511 / 1000 correct (51.10)\n\nIteration 300, loss = 1.2163\nChecking accuracy on validation set\nGot 520 / 1000 correct (52.00)\n\nIteration 400, loss = 1.3469\nChecking accuracy on validation set\nGot 549 / 1000 correct (54.90)\n\nIteration 500, loss = 1.0145\nChecking accuracy on validation set\nGot 572 / 1000 correct (57.20)\n\nIteration 600, loss = 1.3870\nChecking accuracy on validation set\nGot 564 / 1000 correct (56.40)\n\nIteration 700, loss = 1.1131\nChecking accuracy on validation set\nGot 577 / 1000 correct (57.70)\n\n"
+    }
+   ],
    "source": [
     "channel_1 = 32\n",
     "channel_2 = 16\n",
@@ -1068,9 +1157,31 @@
     "# TODO: Rewrite the 2-layer ConvNet with bias from Part III with the           #\n",
     "# Sequential API.                                                              #\n",
     "################################################################################\n",
-    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
-    "pass\n",
-    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "# with torch.no_grad() :\n",
+    "#     conv1 = nn.Conv2d(3, channel_1, 5, padding=2)\n",
+    "#     conv1.weight.data.copy_(random_weight(conv1.weight.shape))\n",
+    "#     conv1.bias.data.copy_(zero_weight(conv1.bias.shape))\n",
+    "#     conv2 = nn.Conv2d(channel_1, channel_2, 3, padding=1)\n",
+    "#     conv2.weight.data.copy_(random_weight(conv2.weight.shape))\n",
+    "#     conv2.bias.data.copy_(zero_weight(conv2.bias.shape))\n",
+    "#     fc = nn.Linear(channel_2*32*32, 10)\n",
+    "#     fc.weight.data.copy_(random_weight(fc.weight.shape))\n",
+    "#     fc.bias.data.copy_(zero_weight(fc.bias.shape))\n",
+    "conv1 = nn.Conv2d(3, channel_1, 5, padding=2)\n",
+    "conv2 = nn.Conv2d(channel_1, channel_2, 3, padding=1)\n",
+    "fc = nn.Linear(channel_2*32*32, 10)\n",
+    "model = nn.Sequential(\n",
+    "    conv1,\n",
+    "    nn.ReLU(),\n",
+    "    conv2,\n",
+    "    nn.ReLU(),\n",
+    "    Flatten(),\n",
+    "    fc,\n",
+    ")\n",
+    "optimizer = optim.SGD(model.parameters(), lr=learning_rate, momentum=0.9, nesterov=True)\n",
+    "\n",
+    "# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "################################################################################\n",
     "#                                 END OF YOUR CODE                             \n",
     "################################################################################\n",
@@ -1213,9 +1324,9 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3.7.2 64-bit ('env': venv)",
+   "display_name": "Python 3.7.7 64-bit ('env': venv)",
    "language": "python",
-   "name": "python37264bitenvvenvbb1d1e9a010a4e94a0bea58b39598660"
+   "name": "python37764bitenvvenve42830a7747f4a3588800023f134a883"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1227,7 +1338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2-final"
+   "version": "3.7.7-final"
   },
   "toc": {
    "nav_menu": {},
