--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -266,12 +266,12 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Using device:  /cpu:0\n"
+     "text": "Using device:  /device:GPU:0\n"
     }
    ],
    "source": [
     "# Set up some global variables\n",
-    "USE_GPU = False\n",
+    "USE_GPU = True\n",
     "\n",
     "if USE_GPU:\n",
     "    device = '/device:GPU:0'\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -1581,11 +1581,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "open_ended_accuracy"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Iteration 0, Epoch 1, Loss: 2.2960033416748047, Accuracy: 14.0625, Val Loss: 2.3577592372894287, Val Accuracy: 10.699999809265137\nIteration 700, Epoch 1, Loss: 1.4133586883544922, Accuracy: 49.33354187011719, Val Loss: 1.153404712677002, Val Accuracy: 60.39999771118164\nIteration 1400, Epoch 2, Loss: 0.9954947233200073, Accuracy: 64.89419555664062, Val Loss: 0.9543267488479614, Val Accuracy: 66.29999542236328\nIteration 2100, Epoch 3, Loss: 0.8184388875961304, Accuracy: 71.51526641845703, Val Loss: 0.9300214648246765, Val Accuracy: 69.5\nIteration 2800, Epoch 4, Loss: 0.7060129642486572, Accuracy: 75.41314697265625, Val Loss: 0.8640815019607544, Val Accuracy: 70.9000015258789\nIteration 3500, Epoch 5, Loss: 0.6260753273963928, Accuracy: 78.26802062988281, Val Loss: 0.885956883430481, Val Accuracy: 72.79999542236328\nIteration 4200, Epoch 6, Loss: 0.5605132579803467, Accuracy: 80.66458892822266, Val Loss: 0.8812713623046875, Val Accuracy: 71.0\nIteration 4900, Epoch 7, Loss: 0.5049650073051453, Accuracy: 82.26946258544922, Val Loss: 1.0282682180404663, Val Accuracy: 70.4000015258789\nIteration 5600, Epoch 8, Loss: 0.4645020365715027, Accuracy: 83.45319366455078, Val Loss: 1.0154489278793335, Val Accuracy: 71.4000015258789\nIteration 6300, Epoch 9, Loss: 0.4319724440574646, Accuracy: 84.91690826416016, Val Loss: 1.0321855545043945, Val Accuracy: 70.70000457763672\nIteration 7000, Epoch 10, Loss: 0.3964129686355591, Accuracy: 85.49942016601562, Val Loss: 1.142228364944458, Val Accuracy: 71.0\n"
+    }
+   ],
    "source": [
     "class CustomConvNet(tf.keras.Model):\n",
     "    def __init__(self):\n",
@@ -1593,9 +1599,28 @@
     "        ############################################################################\n",
     "        # TODO: Construct a model that performs well on CIFAR-10                   #\n",
     "        ############################################################################\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
-    "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        self.conv_1 = tf.keras.layers.Conv2D(32, 5, padding='same', activation='relu')\n",
+    "        self.dense1_1 = tf.keras.layers.Conv2D(16, 3, padding='same', activation='relu')\n",
+    "        self.dense1_2 = tf.keras.layers.Conv2D(16, 3, padding='same', activation='relu')\n",
+    "        self.dense1_3 = tf.keras.layers.Conv2D(16, 3, padding='same', activation='relu')\n",
+    "        self.dense1_4 = tf.keras.layers.Conv2D(16, 3, padding='same', activation='relu')\n",
+    "        self.dense1_c = tf.keras.layers.Concatenate(axis=3)\n",
+    "        self.conv_2 = tf.keras.layers.Conv2D(32, 5, padding='same', activation='relu')\n",
+    "        self.pool_1 = tf.keras.layers.MaxPool2D(strides=2)\n",
+    "        self.dense2_1 = tf.keras.layers.Conv2D(16, 3, padding='same', activation='relu')\n",
+    "        self.dense2_2 = tf.keras.layers.Conv2D(16, 3, padding='same', activation='relu')\n",
+    "        self.dense2_3 = tf.keras.layers.Conv2D(16, 3, padding='same', activation='relu')\n",
+    "        self.dense2_4 = tf.keras.layers.Conv2D(16, 3, padding='same', activation='relu')\n",
+    "        self.dense2_c = tf.keras.layers.Concatenate(axis=3)\n",
+    "        self.conv_3 = tf.keras.layers.Conv2D(32, 5, padding='same', activation='relu')\n",
+    "        self.pool_2 = tf.keras.layers.MaxPool2D(strides=2)\n",
+    "        self.flatten_1 = tf.keras.layers.Flatten()\n",
+    "        self.fc_1 = tf.keras.layers.Dense(10, activation='softmax')\n",
+    "\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "        ############################################################################\n",
     "        #                            END OF YOUR CODE                              #\n",
     "        ############################################################################\n",
@@ -1604,9 +1629,29 @@
     "        ############################################################################\n",
     "        # TODO: Construct a model that performs well on CIFAR-10                   #\n",
     "        ############################################################################\n",
-    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
-    "        pass\n",
-    "\n        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "        # *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
+    "\n",
+    "        x = input_tensor\n",
+    "        x1 = self.conv_1(x)\n",
+    "        x1_1 = self.dense1_1(x1)\n",
+    "        x1_2 = self.dense1_2(x1_1)\n",
+    "        x1_3 = self.dense1_3(x1_2)\n",
+    "        x1_4 = self.dense1_4(x1_3)\n",
+    "        x = self.dense1_c([x1, x1_1, x1_2, x1_3, x1_4])\n",
+    "        x = self.conv_2(x)\n",
+    "        x2 = self.pool_1(x)\n",
+    "        x2_1 = self.dense2_1(x2)\n",
+    "        x2_2 = self.dense2_2(x2_1)\n",
+    "        x2_3 = self.dense2_3(x2_2)\n",
+    "        x2_4 = self.dense2_4(x2_3)\n",
+    "        x = self.dense2_c([x2, x2_1, x2_2, x2_3, x2_4])\n",
+    "        x = self.conv_3(x)\n",
+    "        x = self.pool_2(x)\n",
+    "        x = self.flatten_1(x)\n",
+    "        x = self.fc_1(x)\n",
+    "\n",
+    "\n",
+    "        # *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "        ############################################################################\n",
     "        #                            END OF YOUR CODE                              #\n",
     "        ############################################################################\n",
@@ -1656,9 +1701,9 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.5 64-bit ('env': venv)",
    "language": "python",
-   "name": "python3"
+   "name": "python37564bitenvvenv2459328ae0b2442ebf93ca2de146424a"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1670,7 +1715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.5-final"
   }
  },
  "nbformat": 4,
